--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,24 @@
-$bgcolor: lightblue;
+$p90orange: rgb(249, 168, 0);
 $textcolor: darkblue;
 $fontsize: 18px;
 
 body {
-  background-color : $bgcolor;
+}
+
+html {
+  height: 100vh;
+}
+body {
+  min-height: 100vh;
+}
+
+.fill {
+  height: 100vh;
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
 }
