--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,3 +22,10 @@ body {
   left: 50%;
   transform: translateY(-50%) translateX(-50%);
 }
+
+img{
+  -ms-user-select: none;      /* IE 10+ */
+  -moz-user-select: none;     /* Firefox all */
+  -webkit-user-select: none;  /* Chrome all / Safari all */
+  user-select: none;          /* Likely future */
+}
